tests-integration/tests/snapshots/test__mixed__format.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "Makefile",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "app.rs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "legacy.rs",
      "status": "replaceable"
    },
    {
      "changed": true,
      "path": "not_ignored_without_repository.rs",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "notes.txt",
      "status": "unsupported"
    },
    {
      "changed": true,
      "path": "types.d.ts",
      "status": "missing"
    }
  ]
}
