tests-integration/tests/snapshots/test__mixed__format_idempotent.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "clean",
      "path": "Makefile"
    },
    {
      "outcome": "clean",
      "path": "app.rs"
    },
    {
      "outcome": "clean",
      "path": "legacy.rs"
    },
    {
      "outcome": "clean",
      "path": "not_ignored_without_repository.rs"
    },
    {
      "outcome": "unsupported",
      "path": "notes.txt"
    },
    {
      "outcome": "clean",
      "path": "types.d.ts"
    }
  ]
}
